# pecmae

./: .gitignore  .gitmodules  README.md  decode_protos.py  decode_sample.py  decoder-dev.ipynb  encode.py  encode_mae.py  encodec_embeddings_extraction.py  encodecmae_pipeline.py  find_closest_sample.py  labelmaps.py  requirements.txt  setup.cfg  setup.sh  train.py  train_protos.py  train_protos.sh  train_protos_splits.py  viz_embeddings.py
docs/: ._config.yml.swp  .about.markdown.swp  .index.md.swp  Gemfile  _config.yml  about.markdown  index.md  results_gtzan.md  results_medley_solos_db.md  results_xai_genre.md
genre-dataset/: README.md  discogs-effnet-400.yaml  discogs-genres-2023.yaml  get_genre-list.py  prototypes-AM-selected-genres.yaml  prototypes-AM-selected-genres.yaml.spotifyapi.tsv  prototypes-AM-selected-genres.yaml.tsv.spotifyapi.tsv  selected-genres  selected-genres.spotifyapi.clean.tsv  selected-genres.spotifyapi.house.tsv  selected-genres.yaml  shared-genres_list_D400-AM-EveryNoise.yaml  shared-genres_list_D400-AM.yaml  top20-discogs400-genres.yaml  wiki-popular-2023.yaml
scripts/: train_pecmae_5_gtzan.sh  train_protos_gtzan.sh
src/: commons.py  decode.py  decode_kmeans.py  decode_protos.py  decode_sample_xaigenre.py  download.py  encode_encodecmae.py  extract_maest_embeddings.py  labelmaps.py  models.py  similarities.py  test_protos_splits.py  train.py  train_mlp.py  train_protos.py  train_protos_iterable.py  train_protos_splits.py  train_splits.py
utils/: clean_protos.py  create_protos_metadata.py  create_xaigenre_splits.py  find_closest_sample.py  (+4 more)
(+36 files in other folders)
