[metadata]
name = pecmae
version = 0.0.1
author = Pablo Alonso
author_email = pablo.alonso@upf.edu
description = PECMAE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = pecmae
python_requires = >=3.6
install_requires = 
    datasets
    librosa
    pytorch_lightning>=2.0.0
    pyyaml
    scipy
    soundfile
    tensorboard
    torch>=2.0.0
    torchmetrics
    transformers
    
